medicare-k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: medicare

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
